Changes in Version 2.1-0 (2019-01-22)
=====================================

   o moved 'tol' argument in permutest() to 'control' and renamed to 'comptol'

   o added 'PMM' and 'GENQM' estimators in rma.uni()

   o added vif() function to get variance inflation factors

   o added .glmulti object for making the interaction with glmulti easier

   o added reporter() and reporter.rma.uni() for dynamically generating
     analysis reports for objects of class 'rma.uni'

   o output is now styled/colored when 'crayon' package is loaded (this only
     works on a 'proper' terminal with color support; also works in RStudio)

   o overhauled plot.gosh.rma(); when 'out' is specified, it now shows two
     distributions, one for the values when the outlier is included and
     one for the values when for outlier is excluded; dropped the 'hcol'
     argument and added 'border' argument

   o refactored influence.rma.uni() to be more consistent internally with
     other functions; print.infl.rma.uni() and plot.infl.rma.uni() adjusted
     accordingly; functions cooks.distance.rma.uni(), dfbetas.rma.uni(), and
     rstudent.rma.uni() now call influence.rma.uni() for the computations

   o rstudent.rma.uni() now computes the SE of the deleted residuals in such
     a way that it will yield identical results to a mean shift outlier
     model even when that model is fitted with test="knha"

   o rstandard.rma.uni() gains 'type' argument, and can now also compute
     conditional residuals (it still computes marginal residuals by default)

   o cooks.distance.rma.mv() gains 'cluster' argument, so that the Cook's
     distances can be computed for groups of estimates

   o cooks.distance.rma.mv() gains 'parallel', 'ncpus', and 'cl' arguments
     and can now make use of parallel processing

   o cooks.distance.rma.mv() should be faster by using the estimates from
     the full model as starting values when fitting the models with the ith