@@ -79,6 +79,7 @@ S3method(print, infl.rma.uni)
 S3method(print, list.rma)
 S3method(head, list.rma)
 S3method(tail, list.rma)
+S3method(print, list.confint.rma)
 S3method(print, hc.rma.uni)
 S3method(print, permutest.rma.uni)
 S3method(print, profile.rma)
