@@ -121,6 +121,8 @@
 <a href="#metafor-21-0-2019-01-22" class="anchor"></a>metafor 2.1-0 (2019-01-22)<small> Unreleased </small>
 </h1>
 <ul>
+<li><p><code><a href="../reference/confint.rma.html">confint.rma.mv()</a></code> now returns an object of class <code>list.confint.rma</code> when obtaining CIs for all variance and correlation components of the model; added corresponding <code><a href="../reference/print.confint.rma.html">print.list.confint.rma()</a></code> function</p></li>
+<li><p>moved <code>tol</code> argument in <code><a href="../reference/permutest.html">permutest()</a></code> to <code>control</code> and renamed to <code>comptol</code></p></li>
 <li><p>added <code>PMM</code> and <code>GENQM</code> estimators in <code><a href="../reference/rma.uni.html">rma.uni()</a></code></p></li>
 <li><p>added <code><a href="../reference/vif.html">vif()</a></code> function to get variance inflation factors</p></li>
 <li><p>added <code>.glmulti</code> object for making the interaction with <code>glmulti</code> easier</p></li>
