@@ -217,7 +217,7 @@ confint(object, parm, level, fixed=FALSE, sigma2, tau2, rho, gamma2, phi,
     <p>The confidence intervals for the model coefficients are simply the usual Wald-type intervals which are also shown when printing the fitted object.</p>
 <p>For objects of class <code>"rma.uni"</code> obtained with the <code><a href='rma.uni.html'>rma.uni</a></code> function, the confidence interval for the amount of (residual) heterogeneity (i.e., \(\tau^2\)) is obtained iteratively either via the Q-profile method or via the generalized Q-statistic method (Hartung and Knapp, 2005; Viechtbauer, 2007; Jackson, 2013; Jackson et al., 2014). The latter is automatically used when the model was fitted with <code>method="GENQ"</code>, the former is used in all other cases. Either method provides an exact confidence interval for \(\tau^2\) in random- and mixed-effects models. The square root of the interval bounds is also returned for easier interpretation. Confidence intervals for \(I^2\) and \(H^2\) are also provided (Higgins &amp; Thompson, 2002). Since \(I^2\) and \(H^2\) are just monotonic transformations of \(\tau^2\) (for details, see <code><a href='print.rma.html'>print.rma.uni</a></code>), the confidence intervals for \(I^2\) and \(H^2\) are also exact.</p>
 <p>Usually, the estimate of \(\tau^2\) from the random/mixed-effects model will fall within the confidence interval provided by the Q-profile method. However, this is not guaranteed. Depending on the method used to estimate \(\tau^2\) and the width of the confidence interval, it can happen that the confidence interval does not actually contain the estimate (trying to explain this to reviewers can be tricky). However, using the empirical Bayes or Paule-Mandel estimator of \(\tau^2\) when fitting the model (i.e., using <code>method="EB"</code> or <code>method="PM"</code>) guarantees that the estimate of \(\tau^2\) falls within the confidence interval. When <code>method="GENQ"</code> was used to fit the model, the corresponding CI obtained via the generalized Q-statistic method is also guaranteed to contain the estimate \(\tau^2\).</p>
-<p>For objects of class <code>"rma.mv"</code> obtained with the <code><a href='rma.mv.html'>rma.mv</a></code> function, confidence intervals are obtained by default for all (non-fixed) variance and correlation components of the model. Alternatively, one can use the <code>sigma2</code>, <code>tau2</code>, <code>rho</code>, <code>gamma2</code>, or <code>phi</code> arguments to specify for which variance/correlation parameter a confidence interval should be obtained. Only one of these arguments can be used at a time. A single integer is used to specify the number of the parameter. The function then provides a profile likelihood confidence interval for the specified parameter. It is a good idea to examine the corresponding profile likelihood plot (via the <code><a href='profile.rma.html'>profile.rma.mv</a></code> function) to make sure that the bounds obtained are sensible.</p>
+<p>For objects of class <code>"rma.mv"</code> obtained with the <code><a href='rma.mv.html'>rma.mv</a></code> function, profile likelihood confidence intervals are obtained by default for all (non-fixed) variance and correlation components of the model. Alternatively, one can use the <code>sigma2</code>, <code>tau2</code>, <code>rho</code>, <code>gamma2</code>, or <code>phi</code> arguments to specify for which variance/correlation parameter a confidence interval should be obtained. Only one of these arguments can be used at a time. A single integer is used to specify the number of the parameter. The function then provides a profile likelihood confidence interval for the specified parameter. It is a good idea to examine the corresponding profile likelihood plot (via the <code><a href='profile.rma.html'>profile.rma.mv</a></code> function) to make sure that the bounds obtained are sensible.</p>
 <p>The methods used to find a confidence interval for a variance/correlation component are iterative and require the use of the <code>uniroot</code> function. By default, the desired accuracy (<code>tol</code>) is set equal to <code>.Machine$double.eps^0.25</code> and the maximum number of iterations (<code>maxiter</code>) to <code>1000</code>. These values can be adjusted with <code>control=list(tol=value, maxiter=value)</code>, but the defaults should be adequate for most purposes. If <code>verbose=TRUE</code>, output is generated on the progress of the iterative algorithm. This is especially useful when model fitting is slow, in which case finding the confidence interval bounds can also take considerable amounts of time.</p>
 <p>More problematic when using the <code>uniroot</code> function is setting appropriate end points of the interval to be searched for the confidence interval bounds. The function tries to set some sensible defaults for the end points, but it may happen that the function is only able to determine that a bound is below/above a certain limit (this is indicated in the output accordingly with <code>&lt;</code> or <code>&gt;</code> signs). It can also happen that the model cannot be fitted or does not converge especially at the extremes of the interval to be searched. This will result in missing (<code>NA</code>) bounds and corresponding warnings. It may then be necessary to adjust the end points manually (see &#8216;Note&#8217;).</p>
 <p>Finally, it is also possible that the lower and upper confidence interval bounds for a variance component both fall below zero. Since both bounds then fall outside of the parameter space, the confidence interval then consists of the null/empty set. Alternatively, one could interpret this as a CI with bounds \([0,0]\) or as indicating 'highly (or overly) homogeneous' data.</p>
@@ -229,7 +229,9 @@ confint(object, parm, level, fixed=FALSE, sigma2, tau2, rho, gamma2, phi,
    <dt>ci.lb</dt><dd><p>lower bound of the confidence interval.</p></dd>
    <dt>ci.ub</dt><dd><p>upper bound of the confidence interval.</p></dd>
 
-   The results are formatted and printed with the <a href='print.confint.rma.html'>print.confint.rma</a> function.
+   When obtaining CIs for all variance and correlation components of "rma.mv" models, the object is a list of class "list.confint.rma", where each element is a "confint.rma" object as described above.
+
+   The results are formatted and printed with the <a href='print.confint.rma.html'>print.confint.rma</a> and <a href='print.confint.rma.html'>print.list.confint.rma</a> functions.
 
     
     <h2 class="hasAnchor" id="note"><a class="anchor" href="#note"></a>Note</h2>
