@@ -487,9 +487,9 @@
       </tr><tr>
         
         <td>
-          <p><code><a href="print.confint.rma.html">print(<i>&lt;confint.rma&gt;</i>)</a></code> </p>
+          <p><code><a href="print.confint.rma.html">print(<i>&lt;confint.rma&gt;</i>)</a></code> <code><a href="print.confint.rma.html">print(<i>&lt;list.confint.rma&gt;</i>)</a></code> </p>
         </td>
-        <td><p>Print Method for 'confint.rma' Objects</p></td>
+        <td><p>Print Methods for 'confint.rma' and 'list.confint.rma' Objects</p></td>
       </tr><tr>
         
         <td>
