@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Print Method for 'confint.rma' Objects — print.confint.rma • metafor</title>
+<title>Print Methods for 'confint.rma' and 'list.confint.rma' Objects — print.confint.rma • metafor</title>
 
 <!-- jquery -->
 <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha384-nrOSfDHtoPMzJHjVTdCopGqIqeYETSXhZDFyniQ8ZHcVy08QesyHcnOUpMpqnmWq" crossorigin="anonymous"></script>
@@ -30,9 +30,9 @@
 
 
 
-<meta property="og:title" content="Print Method for 'confint.rma' Objects — print.confint.rma" />
+<meta property="og:title" content="Print Methods for 'confint.rma' and 'list.confint.rma' Objects — print.confint.rma" />
 
-<meta property="og:description" content="Print method for objects of class &quot;confint.rma&quot;." />
+<meta property="og:description" content="Print methods for objects of class &quot;confint.rma&quot; and &quot;list.confint.rma&quot;." />
 <meta name="twitter:card" content="summary" />
 
 
@@ -115,18 +115,20 @@
 <div class="row">
   <div class="col-md-9 contents">
     <div class="page-header">
-    <h1>Print Method for 'confint.rma' Objects</h1>
+    <h1>Print Methods for 'confint.rma' and 'list.confint.rma' Objects</h1>
     
     <div class="hidden name"><code>print.confint.rma.Rd</code></div>
     </div>
 
     <div class="ref-description">
     
-    <p>Print method for objects of class <code>"confint.rma"</code>.</p>
+    <p>Print methods for objects of class <code>"confint.rma"</code> and <code>"list.confint.rma"</code>.</p>
     
     </div>
 
     <pre class="usage"># S3 method for confint.rma
+print(x, digits, &#8230;)
+# S3 method for list.confint.rma
 print(x, digits, &#8230;)</pre>
     
     <h2 class="hasAnchor" id="arguments"><a class="anchor" href="#arguments"></a>Arguments</h2>
@@ -134,7 +136,7 @@ print(x, digits, &#8230;)</pre>
     <colgroup><col class="name" /><col class="desc" /></colgroup>
     <tr>
       <th>x</th>
-      <td><p>an object of class <code>"confint.rma"</code>.</p></td>
+      <td><p>an object of class <code>"confint.rma"</code> or <code>"list.confint.rma"</code>.</p></td>
     </tr>
     <tr>
       <th>digits</th>
@@ -164,7 +166,7 @@ print(x, digits, &#8230;)</pre>
     
     <h2 class="hasAnchor" id="see-also"><a class="anchor" href="#see-also"></a>See also</h2>
 
-    <div class='dont-index'><p><code><a href='confint.rma.html'>confint.rma.uni</a></code></p></div>
+    <div class='dont-index'><p><code><a href='confint.rma.html'>confint.rma.uni</a></code>, <code><a href='confint.rma.html'>confint.rma.mv</a></code></p></div>
     
 
   </div>
