@@ -1,14 +1,16 @@
 \name{print.confint.rma}
 \alias{print.confint.rma}
-\title{Print Method for 'confint.rma' Objects}
+\alias{print.list.confint.rma}
+\title{Print Methods for 'confint.rma' and 'list.confint.rma' Objects}
 \description{
-   Print method for objects of class \code{"confint.rma"}.
+   Print methods for objects of class \code{"confint.rma"} and \code{"list.confint.rma"}.
 }
 \usage{
 \method{print}{confint.rma}(x, digits, \dots)
+\method{print}{list.confint.rma}(x, digits, \dots)
 }
 \arguments{
-   \item{x}{an object of class \code{"confint.rma"}.}
+   \item{x}{an object of class \code{"confint.rma"} or \code{"list.confint.rma"}.}
    \item{digits}{integer specifying the number of decimal places to which the printed results should be rounded (if unspecified, the default is to take the value from the object).}
    \item{\dots}{other arguments.}
 }
@@ -30,6 +32,6 @@
    Viechtbauer, W. (2010). Conducting meta-analyses in R with the metafor package. \emph{Journal of Statistical Software}, \bold{36}(3), 1--48. \url{http://www.jstatsoft.org/v36/i03/}.
 }
 \seealso{
-   \code{\link{confint.rma.uni}}
+   \code{\link{confint.rma.uni}}, \code{\link{confint.rma.mv}}
 }
 \keyword{print}
